# discors

./: Cargo.toml  README.md  clippy.toml
src/: error.rs  lib.rs
src/gateway/: error.rs  mod.rs  shard.rs  shard_manager.rs  websocket.rs
src/model/: mod.rs  user.rs
src/model/gateway/: dispatch.rs  event.rs  intents.rs  mod.rs
src/model/guild/: mod.rs
