[package]
name = "discors"
version = "0.1.0"
edition = "2021"
description = "A new in-development Discord library written in Rust"
repository = "https://github.com/GenericNerd/discors"
license-file = "LICENSE"
authors = [
  "Fabio Almeida <me@fabioalmeida.dev>"
]
categories = ["api-bindings", "asynchronous"]
keywords = ["discord", "api", "client"]
readme = "README.md"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = { version = "0.3" }
flate2 = { version = "1.0", features = ["zlib"] }
bitflags = { version = "2.6", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15"